made index more responsive, fixed last card gap, and fixed search

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -30,6 +30,11 @@
   }
 }
 
+.drink-cards-container::after {
+  content: '';
+  flex: auto;
+}
+
 .drink-card-body {
   word-wrap: break;
   width: 100%;
